--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.3",
     "knex": "^2.3.0",
     "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "numeral": "^2.0.6"
   },
