--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "No",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "node app"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "connect-session-knex": "^3.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -28,11 +30,9 @@
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "numeral": "^2.0.6"
-  }
-  ,
+  },
   "bugs": {
     "url": "https://github.com/Danteee27/Online-Academy-/issues"
   },
   "homepage": "https://github.com/Danteee27/Online-Academy-#readme"
 }
-
