--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Dante",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "connect-session-knex": "^3.0.0",
     "express": "^4.18.2",
