--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.17.3",
     "knex": "^2.3.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
