--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-session-knex": "^3.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-formidable": "^1.2.0",
     "express-handlebars": "^6.0.6",
     "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.17.3",
