--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "numeral": "^2.0.6"
+    "numeral": "^2.0.6",
+    "rater-js": "^1.0.1"
   },
   "bugs": {
     "url": "https://github.com/Danteee27/Online-Academy-/issues"
