--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "connect-session-knex": "^3.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^6.0.6",
@@ -29,7 +30,10 @@
     "knex": "^2.3.0",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
-    "numeral": "^2.0.6"
+    "numeral": "^2.0.6",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth2": "^0.2.0"
   },
   "bugs": {
     "url": "https://github.com/Danteee27/Online-Academy-/issues"
