--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "express-handlebars": "^6.0.6",
     "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.17.3",
+    "form-data": "^4.0.0",
+    "googleapis": "^109.0.1",
     "knex": "^2.3.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "numeral": "^2.0.6",
     "passport": "^0.6.0",
