--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "numeral": "^2.0.6",
+    "otp-generator": "^4.0.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
