.env for general usage

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DB_PASSWORD= 'ducanh123!@#'
 GOOGLE_CLIENT_ID = '572306748056-2r27tmo73ml64prgafogbv9f90gs273m.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET = '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'
+MAIL_EMAIL = 'iplant.iot.2002@gmail.com'
+MAIL_PASSWORD = 'aornerkfpwmmdwyn'
