--- a/package.json
+++ b/package.json
@@ -23,26 +23,21 @@
     "connect-session-knex": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.4.0",
-    "express-formidable": "^1.2.0",
     "express-handlebars": "^6.0.6",
     "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.17.3",
-    "form-data": "^4.0.0",
     "googleapis": "^109.0.1",
     "knex": "^2.3.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "numeral": "^2.0.6",
     "otp-generator": "^4.0.0",
     "passport": "^0.6.0",
-    "passport-facebook": "^3.0.0",
-    "passport-google-oauth2": "^0.2.0",
-    "stream": "^0.0.2"
+    "passport-google-oauth2": "^0.2.0"
   },
   "bugs": {
     "url": "https://github.com/Danteee27/Online-Academy-/issues"
