--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "numeral": "^2.0.6",
     "otp-generator": "^4.0.0",
